--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
+    "axios": "^1.7.7",
     "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
